--- a/bbking/templates/bbking/tags/url.html
+++ b/bbking/templates/bbking/tags/url.html
@@ -1,1 +1,1 @@
-<a href="{{ url }}">{{ contents }}</a>[{{ domain }}]
+<a href="{{ url }}">{{ contents }}</a>{% if domain %}[{{ domain }}]{% endif %}
