[trac #125] fix youtube embedding for mobile safari & youtu.be URLs

--- a/bbking/templates/bbking/tags/youtube.html
+++ b/bbking/templates/bbking/tags/youtube.html
@@ -1,9 +1,5 @@
 {% if valid_url %}
-<object width="560" height="340">
-    <param name="movie" value="{{ url }}"></param>
-    <param name="allowFullScreen" value="true"></param>
-    <param name="allowscriptaccess" value="always"></param>
-    <embed src="{{ url }}" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="560" height="340"></embed></object><br />
+<iframe type="text/html" width="640" height="385" src="{{ url }}" frameborder="0"></iframe>
 {% else %}
     Invalid Youtube URL: {{ contents }}
 {% endif %}
